# a2a-protocol-semantic-kernel

./: README.md  pyproject.toml  sk_cli_main.py  sk_main.py
sk/: __init__.py  agent.py  task_manager.py
